--- a/index.html
+++ b/index.html
@@ -8,8 +8,36 @@
 </head>
 <body>
   <div class="header">
-
-    
+    <div class="section1"><div><h1> <span class=" logo">EnJOY BOY </span>
+     <span>THE ONE PIECE </span><span>Manga</span>
+</h1></div></div>
+   <div class="section2"> <div class="mangalist">
+  <select name="manga" class="Mangalist" >
+   <option class="Mangalist"> ch-1023</option>
+  </select>  
+  </div></div>
   </div>
+
+  <div class="manga-container">
+  <div class="headline"><h1>ONE PIECE CHAPTER 1023</h1></div>
+<div><img src="manga/ch-1023//1.png"></div>
+<div><img src="manga/ch-1023//2.png"></div>
+<div><img src="manga/ch-1023//3.png"></div>
+<div><img src="manga/ch-1023//onepiece-1023-void-004.png"></div>
+<div><img src="manga/ch-1023//onepiece-1023-void-005 (1).png"></div>
+<div><img src="manga/ch-1023//onepiece-1023-void-006.png"></div>
+<div><img src="manga/ch-1023//onepiece-1023-void-007.png"></div>
+<div><img src="manga/ch-1023//onepiece-1023-void-008.png"></div>
+<div><img src="manga/ch-1023//onepiece-1023-void-009.png"></div>
+<div><img src="manga/ch-1023//onepiece-1023-void-010.png"></div>
+<div><img src="manga/ch-1023//onepiece-1023-void-011.png"></div>
+<div><img src="manga/ch-1023//onepiece-1023-void-012.png"></div>
+<div><img src="manga/ch-1023//onepiece-1023-void-013.png"></div>
+<div><img src="manga/ch-1023//onepiece-1023-void-014.png"></div>
+<div><img src="manga/ch-1023//onepiece-1023-void-015.png"></div>
+<div><img src="manga/ch-1023//onepiece-1023-void-016.png"></div>
+
+  </div>
+<script src="script.js"></script>
 </body>
 </html>
