--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>one piece manga</title>
+  <title>Document</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="header">
-    <div class="section1"><div><h1> <span class=" logo">EnJOY BOY </span>
+    <div class="section1"><div><h1>
      <span>THE ONE PIECE </span><span>Manga</span>
 </h1></div></div>
    <div class="section2"> <div class="mangalist">
@@ -19,7 +19,7 @@
   </div>
 
   <div class="manga-container">
-  <div class="headline"><h1>ONE PIECE CHAPTER 1023</h1></div>
+  <div class="headline"><h2>ONE PIECE CHAPTER 1023</h2></div>
 <div><img src="manga/ch-1023//1.png"></div>
 <div><img src="manga/ch-1023//2.png"></div>
 <div><img src="manga/ch-1023//3.png"></div>
