--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="header">
     <div class="section1"><div><h1>
-     <span>THE ONE PIECE </span><span>Manga</span>
+     <span>THE ONE PIECE </span>
 </h1></div></div>
    <div class="section2"> <div class="mangalist">
   <select name="manga" class="Mangalist" >
